# ngfd

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  com.nokia.NonGraphicFeedback1.Backend.service  ngfd.ini
data/events.d/: accessory_connected.ini  accessory_disconnected.ini  battery_low.ini  calendar.ini  call_exists.ini  charging_started.ini  chat.ini  chat_exists.ini  chat_fg.ini  clock.ini  email.ini  email_exists.ini  information_snd.ini  information_strong.ini  information_tacticon.ini  recharge_battery.ini  ringtone.ini  sms.ini  sms_exists.ini  sms_fg.ini  voip_ringtone.ini  warning_snd.ini  warning_strong.ini  warning_tacticon.ini  wrong_charger.ini
data/plugins.d/: 50-ffmemless.ini  50-gst.ini  50-resource.ini  50-tonegen.ini  50-transform.ini  Makefile.am
doc/: doxygen.cfg
rpm/: ngfd.service  ngfd.spec
src/: Makefile.am
src/include/ngf/: Makefile.am  context.h  core-dbus.h  haptic.h  inputinterface.h  log.h  plugin.h  proplist.h  request.h  sinkinterface.h  value.h
src/ngf/: Makefile.am  context.c  core-dbus-internal.h  core-dbus.c  core-internal.h  core-player.c  core.c  event-internal.h  event.c  eventlist-internal.h  eventlist.c  eventrule-internal.h  eventrule.c  haptic-internal.h  haptic.c  inputinterface.c  log.c  main.c  plugin-internal.h  plugin.c  proplist.c  request-internal.h  request.c  sinkinterface-internal.h  sinkinterface.c  value.c
src/plugins/: Makefile.am
src/plugins/callstate/: plugin.c
src/plugins/canberra/: plugin.c
src/plugins/dbus/: Makefile.am  plugin.c
src/plugins/devicelock/: Makefile.am  plugin.c
src/plugins/fake/: plugin.c
src/plugins/ffmemless/: ffmemless.c  ffmemless.h  plugin.c
src/plugins/gst/: plugin.c
src/plugins/immvibe/: plugin.c
src/plugins/mce/: plugin.c
src/plugins/null/: Makefile.am  plugin.c
src/plugins/profile/: plugin.c
src/plugins/resource/: plugin.c
src/plugins/route/: Makefile.am  keys.h  plugin.c
src/plugins/streamrestore/: Makefile.am  plugin.c  volume-controller.c  volume-controller.h
src/plugins/tonegen/: Makefile.am  ausrv.c  ausrv.h  dbusif.c  dbusif.h  dtmf.c  dtmf.h  envelop.c  envelop.h  indicator.c  indicator.h  ngfif.c  ngfif.h  plugin.c  rfc4733.c  rfc4733.h  stream.c  stream.h  tone.c  tone.h  tonegend.h
src/plugins/tonegen/trace/: trace.h
src/plugins/transform/: plugin.c
tests/: Makefile.am  test-context.c  test-core.c  test-event.c  test-fake-plugin.c  test-inputinterface.c  test-plugin.c  test-proplist.c  test-request.c  test-sinkinterface.c  test-value.c
